--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,12 +13,16 @@
         <action
             android:id="@+id/action_navigation_home_to_navigation_product_detail"
             app:destination="@id/navigation_product_detail" />
+
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_cart"
+            app:destination="@id/navigation_cart" />
     </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="org.minhtc.and103.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_order"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
@@ -28,7 +32,30 @@
         tools:layout="@layout/fragment_notifications" />
     <fragment
         android:id="@+id/navigation_product_detail"
-        android:name="org.minhtc.and103.ui.productDetail.ProductDetailFragment"
-        android:label="Product Detail"
-        tools:layout="@layout/fragment_product_detail" />
+        android:name="org.minhtc.and103.ui.home.productDetail.ProductDetailFragment"
+        android:label="Chi tiết sản phẩm"
+        tools:layout="@layout/fragment_product_detail" >
+
+        <action
+            android:id="@+id/action_navigation_product_detail_to_navigation_cart"
+            app:destination="@id/navigation_cart" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_cart"
+        android:name="org.minhtc.and103.ui.cart.CartFragment"
+        android:label="Giỏ hàng"
+        tools:layout="@layout/fragment_cart" >
+        <action
+            android:id="@+id/action_navigation_cart_to_navigation_cart_detail"
+            app:destination="@id/cartDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="org.minhtc.and103.ui.setting.SettingsFragment"
+        android:label="Cài đặt" />
+    <fragment
+        android:id="@+id/cartDetailFragment"
+        android:name="org.minhtc.and103.ui.cart.detail.CartDetailFragment"
+        android:label="Chi tiết giỏ hàng"
+        tools:layout="@layout/fragment_cart_detail" />
 </navigation>
